2010-11-26  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/printer/Epson-LP-8300CPD.xml,
	  db/source/printer/Epson-LP-8500CPD.xml,
	  db/source/printer/Epson-LP-9200C.xml,
	  db/source/printer/Epson-LP-9600SPD.xml,
	  db/source/printer/Epson-LP-9800C.xml:
	  Entries modified in the MySQL database.

2010-11-25  Till Kamppeter <till.kamppeter@gmail.com>

	* PPD/Lexmark/Lexmark_C510.ppd, PPD/Lexmark/Lexmark_C520.ppd,
	  PPD/Lexmark/Lexmark_C522.ppd, PPD/Lexmark/Lexmark_C524.ppd,
	  PPD/Lexmark/Lexmark_C750.ppd, PPD/Lexmark/Lexmark_C752.ppd,
	  PPD/Lexmark/Lexmark_C780.ppd, PPD/Lexmark/Lexmark_C782.ppd,
	  PPD/Lexmark/Lexmark_C910.ppd, PPD/Lexmark/Lexmark_C912.ppd,
	  PPD/Lexmark/Lexmark_C930.ppd, PPD/Lexmark/Lexmark_C935.ppd,
	  PPD/Lexmark/Lexmark_E350d.ppd, PPD/Lexmark/Lexmark_E352dn.ppd,
	  PPD/Lexmark/Lexmark_X940e.ppd, PPD/Lexmark/Lexmark_X945e.ppd:
	  Corrected translation lines to comply with specs and PPD
	  extensions (bug #559).

	* printer/Epson-LP-8300CPD.xml, printer/Epson-LP-8500CPD.xml,
	  printer/Epson-LP-8800CPS.xml, printer/Epson-LP-9100PS3.xml,
	  printer/Epson-LP-9500CPS.xml, printer/Epson-LP-9600SPD.xml: Added
	  XML entries for Japanese PPDs from Epson.

	* printer/Epson-LP-9200C.xml, printer/Epson-LP-9800C.xml: Added
	  links to Japanese PPDs from Epson.

2010-11-25  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/printer/Epson-AL-C2000_PS3.xml,
	  db/source/printer/Epson-AL-C4100.xml:
	  Entries modified in the MySQL database.

2010-11-24  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Epson-AcuLaser_C4100PS.xml,
	  printer/Epson-AcuLaser_C9100PS.xml,
	  printer/Epson-AcuLaser_2600PS.xml, printer/Epson-AL-2600.xml,
	  printer/Epson-AcuLaser_C1000.xml, printer/Epson-AL-C1000.xml,
	  printer/Epson-AcuLaser_C1900.xml, printer/Epson-AL-C1900.xml,
	  printer/Epson-AcuLaser_C1900PS.xml,
	  printer/Epson-AL-C1900_PS3.xml, printer/Epson-AcuLaser_C2000.xml,