@@ -1,0 +1,14 @@
+<printer id="printer/Brother-MFC-295CN">
+  <make>Brother</make>
+  <model>MFC-295CN</model>
+  <mechanism>
+    <inkjet />
+  </mechanism>
+  <autodetect>
+    <general>
+      <manufacturer>Brother</manufacturer>
+      <model>MFC-295CN</model>
+    </general>
+  </autodetect>
+  <functionality>F</functionality>
+</printer>
