@@ -1,3 +1,8 @@
+2010-12-05  OpenPrinting Web Server <webmaster@openprinting.org>
+
+	* db/source/printer/Brother-MFC-295CN.xml:
+	  New entries added to the MySQL database.
+
 2010-11-26  OpenPrinting Web Server <webmaster@openprinting.org>
 
 	* db/source/printer/Epson-LP-8300CPD.xml,
